<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
  <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  >
  <TextView
  			android:id="@+id/yourloc"
  			android:text="@string/yourloc"
  			android:scaleType="fitXY"
  			
  			android:layout_gravity="center"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			>
  </TextView>
  <TextView
  			android:id="@+id/placename"
  			android:text="@string/placename"
  			android:scaleType="fitXY"
  			android:textColor="@color/white"
  			android:layout_gravity="center"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			>
  </TextView>
  <TextView
  			android:id="@+id/taskava"
  			android:text="@string/taskava"
  			android:scaleType="fitXY"
  			
  			android:layout_gravity="center"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			>
  </TextView>
  </LinearLayout>
  	<ListView
		android:id="@+id/gvPublish"
		
		android:dividerHeight="1px"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@drawable/myinfobkg"
		/>
</LinearLayout>

