<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkg" android:gravity="center_horizontal">
    
    <TextView android:id="@+id/sysname" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:text="@string/welcome"
    android:textColor="@color/orange"
    android:gravity="center"
    android:paddingLeft="75dp"/>
    
    <TextView android:id="@+id/textUserName" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip">
    </TextView>
    <EditText 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:layout_below="@id/textUserName"
    android:id="@+id/editUserName"
    android:numeric="integer"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:hint="@string/hintname">
    </EditText>
    <TextView
    android:id="@+id/textPSD" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_below="@id/editUserName"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip">
    </TextView>
    <EditText
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:layout_below="@id/textPSD"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:id="@+id/editPSD" 
    android:password="true"
    android:hint="@string/hintpwd">
    </EditText>
    <TextView
    android:id="@+id/textIp" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_below="@id/editPSD"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip">
    </TextView>
    <EditText
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:layout_below="@id/textIp"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:id="@+id/editIp">
    </EditText>
    <EditText
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:layout_below="@id/textIp"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:id="@+id/editPort" android:numeric="integer">
    </EditText>
    <RelativeLayout 
    android:id="@+id/sbu_relativeLayout" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent"
    android:layout_below="@id/editIp">
        <Button android:id="@+id/buttonReg" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dip"
        android:text="注册" 
        android:layout_gravity="right"></Button>
        <Button android:id="@+id/buttonLogin" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="登录" 
        android:layout_toLeftOf="@id/buttonReg"></Button>
    </RelativeLayout>
</RelativeLayout>
